css/style.css
/* ... */
.slick-slide.opacidown {
  opacity: 0;
}

div.slick-current {
   opacity: 1;
   transition: opacity .5ms ease;
}

div.slick-active {
   opacity: 1;
   transition: opacity .5ms ease;
}

section#buy {
  text-align: center;
   bottom: -20px;
}

section#buy a {
  color: inherit;
  text-decoration: none;

}

.margin-top {
  margin-top: 1em;
}


/*/////////// ABOUT /////////*/


.vertical-center {
  position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

section#about {
  text-align: center;
  margin-top: 3.5%;
}

div#description {
  margin-bottom: 2%;
  text-align: center;
}

.bottom-center {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  bottom: 0;
}

/* /////// CURRENT /////// */
section#current {
  text-align: center;
}


/*///////// CARTON /////////*/

.carton {
 width: 80%;
 margin-right:auto;
 margin-left:auto;
 overflow: hidden;
 padding-top: 1em;
}

.galleryItem img {
 max-width: 100%;
 -webkit-border-radius: 1px;
 -moz-border-radius: 1px;
 border-radius: 1px;
}

.galleryItem {
 float: left;
 width: 16%;
}

.small-margin {
  margin: .5% .5% 14px 0;
}

.paypal_btn{
display: inline-block;
font-family: inherit;
font-size: 1em;
color: #000;
padding: 2px 14px;
margin: 0;
background: #fff;
border: 0;
cursor: pointer;
outline: none;
}

button, html input[type="button"], input[type="reset"], input[type="submit"] {
    -webkit-appearance: button-bevel;
}
/*.paypal_btn:hover{ background: ; }
*/
/*//////// SLIDER IMAGES /////////*/

#img0 {
  background-image: url("../images/issue01/NICOTINECOVER.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img1 {
  background-image: url("../images/issue01/NICOTINE01.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img2 {
  background-image: url("../images/issue01/NICOTINE02.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img3 {
  background-image: url("../images/issue01/NICOTINE03.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img4 {
  background-image: url("../images/issue01/NICOTINE04.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img5 {
  background-image: url("../images/issue01/NICOTINE05.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img6 {
  background-image: url("../images/issue01/NICOTINE06.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img7 {
  background-image: url("../images/issue01/NICOTINE07.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img8 {
  background-image: url("../images/issue01/NICOTINE08.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img9 {
  background-image: url("../images/issue01/NICOTINE09.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img10 {
  background-image: url("../images/issue01/NICOTINE10.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img11 {
  background-image: url("../images/issue01/NICOTINE11.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img12 {
  background-image: url("../images/issue01/NICOTINE12.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img13 {
  background-image: url("../images/issue01/NICOTINE13.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img14 {
  background-image: url("../images/issue01/NICOTINE14.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img15 {
  background-image: url("../images/issue01/NICOTINE15.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img16 {
  background-image: url("../images/issue01/NICOTINE16.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img17 {
  background-image: url("../images/issue01/NICOTINE17.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}


/*/////////////   MEDIA QUERIES  ////////////////*/

@media only screen and (max-width: 642px){
  ul li#print_archive {
    display: none;
  }

}

/* small browsers */
@media only screen and (min-width: 568px) and (max-width: 653px) and (-webkit-min-device-pixel-ratio: 1) {
  div#navbar-ipad {
  display: block;
  }

  ul li#logo {
    display: none;
  }

  ul li#logo-ipad {
    display: block;
    font-size: 2em;
    letter-spacing: -1.4px; 
    margin-top: 3%;
  }

  .slider {
    margin-top: 2em;
  }

  section#about {
    margin-top: 10%;
    width: 65%;
    font-size: 83%;
  }

  div#description {
    font-size: 83%;
  }

}
/* ... */

